--- a/src/pug/servises_sell.pug
+++ b/src/pug/servises_sell.pug
@@ -1,6 +1,6 @@
 extends template/_main
 
-include modules/_header-inner-img
+include modules/_header
 include modules/_breadcrumbs
 include modules/_benefits
 include modules/_container-rental
@@ -18,7 +18,7 @@ block content
   //- wrapper head
   .wrapper-head.wrapper-head--servises-sell
     //- header
-    +header-inner-img
+    +header
     //- intro
     section.page-intro.page-intro--color-white
       .container
