--- a/src/pug/modules/_page-contact.pug
+++ b/src/pug/modules/_page-contact.pug
@@ -5,7 +5,5 @@ mixin page-contact
   .page-contact
     +block-contact-page('block-contact--line')
     .page-contact__maps
-      img(srcset=`img/img-contacts-maps.webp 1x, img/img-contacts-maps-2x.webp 2x` src=`img/img-contacts-maps.webp` loading="lazy")
-      .page-maps-hit
-        img(src="img/img-logo-blue.svg" alt="" loading="lazy")
+      iframe(src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4479.823811176711!2d37.576074505221165!3d55.84684337078827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b53652bbb951eb%3A0x467dcaf5b7b07bc0!2sPORT%20PLAZA!5e0!3m2!1sen!2sru!4v1672921778325!5m2!1sen!2sru" width="100%" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade")
 
