--- a/src/scss/modules/header/_nav.scss
+++ b/src/scss/modules/header/_nav.scss
@@ -2,7 +2,8 @@
   @include alignJustify();
 
   &__item {
-    margin-right: 50px;
+    // margin-right: 50px;
+    margin-right: 30px;
 
     &:last-child {
       margin-right: 0;
@@ -13,6 +14,7 @@
     font-family: 'Gilroy SemiBold';
     color: $colorWhite;
     text-decoration: none;
+    padding: 40px 10px;
 
     &-icon {
       display: none;
@@ -31,6 +33,15 @@
         padding: 0;
       }
     }
+
+    // &:active, 
+    // &:focus {
+    //   text-decoration: underline;
+    // }
+
+    &--active {
+      text-decoration: underline;
+    }
   }
 
   @include respond($largeDesktop_1365) {
@@ -43,7 +54,8 @@
   @include respond($largeDesktop_1279) {
 
     &__item {
-      margin-right: 20px;
+      // margin-right: 20px;
+      margin-right: 10px;
     }
   }
 
@@ -54,6 +66,7 @@
       width: 100%;
       margin: 0 0 22px 0;
 
+
       &:last-child {
         margin-bottom: 0;
       }
@@ -62,6 +75,7 @@
     &__link {
       width: 100%;
       @include alignJustify(space-between, center);
+      padding: 0;
 
       &-icon {
         display: inline-block;
@@ -121,6 +135,10 @@
     max-height: 300px;
     overflow: visible;
     padding: 39px 0 40px;
+
+    & ~ .menu__link {
+      text-decoration: underline;
+    }
   }
 
   &__menu {
