--- a/src/scss/modules/main/_home-intro.scss
+++ b/src/scss/modules/main/_home-intro.scss
@@ -2,7 +2,8 @@
 .home-intro {
 	height: calc(100% - 100px);
 	width: 100%;
-	padding: 156px 0 0;
+	// padding: 156px 0 0;
+	padding: 40px 0 0;
 	color: $colorWhite;
 	z-index: 1;
 
