--- a/src/scss/modules/header/_nav.scss
+++ b/src/scss/modules/header/_nav.scss
@@ -47,7 +47,7 @@
   @include respond($largeDesktop_1365) {
 
     &__item {
-      margin-right: 40px;
+      margin-right: 20px;
     }
   }
 
@@ -55,7 +55,11 @@
 
     &__item {
       // margin-right: 20px;
-      margin-right: 10px;
+      margin-right: 0px;
+    }
+
+    &__link {
+      padding: 40px 8px;
     }
   }
 
