correct block containers, add link logo

--- a/src/pug/modules/_header.pug
+++ b/src/pug/modules/_header.pug
@@ -4,9 +4,9 @@ mixin header()
     .container.row.row--center
       //- logo
       .logo.header__logo
-        .logo__img-normal
+        a(href="#" class="logo__img-normal")
           img(src="img/img-logo-white.svg" alt="")
-        .logo__img-active
+        a(href="#" class="logo__img-active")
           img(src="img/img-logo-blue.svg" alt="")
       //- menu
       ul.menu.header__menu
