--- a/src/scss/modules/main/_container-selection.scss
+++ b/src/scss/modules/main/_container-selection.scss
@@ -1,6 +1,7 @@
 
 .container-selection {
-	padding: 103px 0 100px;
+	// padding: 103px 0 100px;
+	padding: 103px 0 84px;
 
 	.section-head__content {
 		margin-top: 52px;
@@ -35,6 +36,7 @@
 	&__item {
 		width: 100%;
 		max-width: 704px;
+		margin-bottom: 16px;
 		padding: 50px 60px;
 		background-color: $colorPeriwinkleCrayola;
 		text-decoration: none;
