--- a/src/scss/modules/main/_servises.scss
+++ b/src/scss/modules/main/_servises.scss
@@ -188,9 +188,11 @@
 		padding: 30px 30px 28px;
 		background-color: $colorWhite;
 		text-decoration: none;
+		transition: background-color .1s ease-in-out, background-image .4s ease-in-out; 
 
 		&:hover {
-			background: url(../img/img-pattern.svg), $colorBlackSea;
+			background-image: url(../img/img-pattern.svg);
+			background-color: $colorBlackSea;
 
 			#{$lst}__name {
 				color: $colorWhite;
@@ -205,7 +207,7 @@
 		margin-top: 14px;
 		@include fontFamily(16px, 'Gilroy SemiBold');
 		color: $colorDarkGreyBlue;
-		transition: all $varTrs;
+		transition: all .1s ease-in-out;
 	}
 
 	@include respond($largeDesktop_1365) { 
